# test_task1

./: .gitignore  CMakeLists.txt  data.txt  instructions.txt
include/: ConvA.hxx  InvalidDataError.hxx  program1.hxx  program2.hxx
src/: ConvA.cxx  main.cxx  prog1main.cxx  prog2main.cxx  program1.cxx  program2.cxx
